logging changes in Faculty and Login Controller